# BME_SzGSec_Hazi

./: .gitignore  README.md
3de0/: 3de0.sln  It-Security.postman_collection.json  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  localhost.key
3de0/3de0/: 3de0_API.csproj  Dockerfile  Dockerfile.original  HideInDocsFilter.cs  Program.cs  appsettings.json
3de0/3de0_BLL/: 3de0_BLL.csproj  AutoMapperConfig.cs  CaffService.cs  CommentService.cs  ICaffService.cs  ICommentService.cs
3de0/3de0_BLL_Abstraction/: 3de0_BLL_Abstraction.csproj
3de0/3de0_BLL_DAL/: 3de0_DAL.csproj  AppDbContext.cs  CaffFile.cs  Comment.cs  History.cs  User.cs
3de0/3de0_Identity/: 3de0_Identity.csproj  Config.cs  Dockerfile  Dockerfile.original  HideInDocsAttribute.cs  HostingExtensions.cs  ProfileService.cs  Program.cs  SeedData.cs  appsettings.json
3de0/Db/: Dockerfile  InitScript.sql  entrypoint.sh  import-data.sh
3de0/WebClient/: Program.cs
3de0/Új mappa/: localhost.crt
PInvokeTest/: .gitignore  PInvokeTest.sln
PInvokeTest/PInvokeTest/: CAFFAnimation.cs  CAFFNative.cs  CIFFImage.cs  Program.cs
libCAFF/: .gitignore  CAFFAnimation.cpp  CAFFAnimation.h  CAFFLoader.cpp  CAFFLoader.h  CIFFImage.cpp  CIFFImage.h  CIFFLoader.cpp  CIFFLoader.h  CIFFWriter.cpp  CIFFWriter.h  CMakeLists.txt  Dockerfile  Makefile  capi.cpp  capi.h  exe_test.cpp  preview.cpp  test_afl.cpp  test_dyn.c
libCAFF/test_images/: crash.caff
webshop_client/: README.md  pubspec.yaml
webshop_client/lib/: main.dart  provider_objects.dart
webshop_client/web/: index.html  manifest.json
(+133 files in other folders)
